# api/swagger/swagger.yaml
@@ -4,9 +4,9 @@ info:
   title: Woolies X tech challenge API
 # during dev, should point to your local machine
 host: localhost:10010
-# basePath prefixes all resource paths 
+# basePath prefixes all resource paths
 basePath: /
-# 
+#
 schemes:
   # tip: remove http to make production-grade
   - http
@@ -18,6 +18,17 @@ consumes:
 produces:
   - application/json
 paths:
+  /api/user:
+    get:
+      description: "Exercise 1 - user endpoint that respond with name and token"
+      operationId: "GetUser"
+      parameters: []
+      responses:
+        200:
+          description: "user name and token"
+          schema:
+            $ref: "#/definitions/User"
+      x-swagger-router-controller: "GetUser"
   /hello:
     # binds a127 app logic to a route
     x-swagger-router-controller: hello_world
@@ -46,6 +57,15 @@ paths:
     x-swagger-pipe: swagger_raw
 # complex objects have schema definitions
 definitions:
+  User:
+    type: "object"
+    properties:
+      name:
+        type: "string"
+        description: "Name of user"
+      token:
+        type: "string"
+        description: "user access token"
   HelloWorldResponse:
     required:
       - message
